# kl2017

./: ESP8266.txt  arduino.txt
PiCapture_v2/PiCapture_v2/: CMakeLists.txt  Makefile
PiCapture_v2/PiCapture_v2/data/: fontface3.xml  frontface31_v1.xml  frontface4.xml  frontface5.xml  haartraining_final_6.xml  myfacedetector_10_1_2017_v1.xml  myfacedetector_399x399_13_1.xml  myfacedetector_500x500_11_1_2017_v1.xml  myfacedetector_6_1_2017_v1.xml  myfacedetector_8_1_2017_v1.xml  myfacedetector_v2.xml
PiCapture_v2/PiCapture_v2/nbproject/: configurations.xml  project.xml
PiCapture_v2/PiCapture_v2/nbproject/private/: configurations.xml  private.xml  timestamps-169.254.110.22-pi-22
PiCapture_v2/PiCapture_v2/src/: PeopleDetector.cpp  PeopleDetector.h  PiCapture.cpp  PiCapture.h  VD.cpp  main.cpp  main_thread.cpp  motion_src.cpp
ServerDoAn/: index.js  package.json  status.json
ServerDoAn/webclient/: trangchu.ejs  xuly.js
ServerDoAn/webclient/css/: style_autodoor.css
